# maple-broadband

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
address_normalize/: es_client.py  model.py  paths.py  utils.py
address_normalize/es_artifacts/: index.json
address_normalize/notebooks/: Output.xlsx  clean_addresses-1-JB-20221207.ipynb  clean_addresses-1-JB-20221208.ipynb  clean_addresses-2-JB-20221208.ipynb  clean_addresses-3-JB-20221209.ipynb  clean_addresses-4-JB-20221209.ipynb  clean_addresses-best-2-JB-20221209.ipynb  clean_addresses_all-best-1-JB-20230116.ipynb  generate_e911_corpus-JB-20230116.ipynb  merge_pending_matches-1-JB-202330116.ipynb  merge_phase_1_matches-1-JB-20230102.ipynb  merge_vcbb-1-JB-20230116.ipynb  temp.csv
data/: corpus_dict.pkl
data/processed/: Master Project Address List 110822.xlsx - temp_phase_1.csv  Master_Project_Address_List-20230116.xlsx - Pending_Phase.csv  match_df.csv  pending_phase_df.csv  pending_phase_vcbb_update.xlsx  phase1_matches_df.csv  phase_1_missed_joins.csv  phase_1_vcbb_update.xlsx  temp_pending_phase.csv  temp_phase_1.csv  vcbb_missed_addresses.csv
