[tool.poetry]
name = "mb-utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "address_normalize"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
python-Levenshtein = "^0.20.8"
pathlib = "^1.0.1"
ipython = "^8.7.0"
openpyxl = "^3.0.10"
gensim = "^4.2.0"
numpy = "^1.23.5"
google-i18n-address = "^2.5.2"
usaddress = "^0.5.10"
sentence-transformers = "^2.2.2"
elasticsearch = "^8.5.3"
eland = "^8.3.0"
xlwt = "^1.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
